# nextocr-python

./: LICENSE  README.md  pyproject.toml
src/: __init__.py
src/nextocr/: nextocr.py
tests/: test_basic.py
